--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,25 @@
-@charset utf-8;
+@charset "UTF-8";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(http://fonts.googleapis.com/css?family=Lato:400italic);
 
-.content {
+#four_oh_four:before {
+content:url('../images/404.png');
+}
+
+.four_oh_four {
+	font-family: 'Lato', sans-serif;
+	font-size:48px;
+}
+.four_oh_four a {
+	text-decoration: none;
+}
+
+.logo {
+width:300px;
+height:81px;
+}
+
+.header {
 margin-top:10px;
 }
 
@@ -11,14 +29,14 @@ text-align:center;
 
 #header {
 background-color:#86CEE4;
-position:absolute;
+position:fixed;
 top:0;
 left:0;
 right:0;
 z-index:100;
 }
 
-#body {
+#content {
 margin-top:150px;
 }
 
@@ -32,8 +50,7 @@ right:0;
 #navigation-bar ul {
 list-style:none;
 line-height:1;
-display:block;
-zoom:1;
+display:inline-block;
 margin:0;
 padding:0;
 }
@@ -103,7 +120,7 @@ width:100%;
 }
 
 /*If desktop (screen) and the max width is up to 768 CSS pixels*/
-@media screen and max-width 768px{
+@media screen and (max-width: 768px) {
   #navigation-bar ul li {
   float:none;
   }
