--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,8 @@ content:url('../images/404.png');
 .four_oh_four {
 	font-family: 'Lato', sans-serif;
 	font-size:48px;
+	line-height: 15px;
+
 }
 .four_oh_four a {
 	text-decoration: none;
