--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,33 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:700);
 @import url(http://fonts.googleapis.com/css?family=Lato:400italic);
-
 #four_oh_four:before {
-	content:url('../images/404.png');
+	content: url('../images/404.png');
 }
-
 .four_oh_four {
 	font-family: 'Lato', sans-serif;
 	font-size: 48px;
 	line-height: 15px;
-
 }
 .four_oh_four a {
 	text-decoration: none;
 }
-
+#four_oh_four_content {
+	margin: 150px auto;
+	text-align: center;
+}
 .logo {
 	width: 300px;
-	height: 81px;
+	height: 82px;
 }
-
 .header {
 	margin-top: 10px;
 }
-
 body {
 	text-align: center;
 	font-family: 'Lato', sans-serif;
+	margin: 0 auto;
 }
-
 #header {
 	background-color: #86CEE4;
 	position: fixed;
@@ -37,12 +35,52 @@ body {
 	left: 0;
 	right: 0;
 	z-index: 100;
+	height: 140px;
 }
-
+#pheader {
+	background-color: #86CEE4;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 100;
+	height: 187px;
+}
+#productimage {
+	width: 290px;
+	height: 582px;
+}
+.productimage {
+	/* left side */
+	width: 50%;
+	float: left;
+}
+.producttext {
+	/* right side */
+	width: 49%;
+	float: right;
+}
+#products {
+	padding-top: 15px;
+}
+#product_location {
+	border-color: #A7A7A7;
+	border: 3px groove;
+	text-transform: uppercase;
+	width: 100%;
+}
 #content {
-	margin-top: 200px;
+	margin: 140px auto;
+	width: 1000px;
+	text-align: center;
+	background-color: #86CEE4;
 }
-
+#pcontent {
+	/* above height = 187px */
+	margin: 202px auto;
+	width: 1000px;
+	text-align: center;
+}
 #footer {
 	background-color: #86CEE4;
 	position: absolute;
@@ -50,18 +88,30 @@ body {
 	right: 0;
 	bottom: 0;
 }
-
-
-
+.productinfo_upper {
+	border: 2px solid;
+	border-color: #A7A7A7;
+}
+.productname {
+	border-bottom: 1px solid;
+	border-color: #A7A7A7;
+	font-weight: bold;
+	font-size: 30px;
+}
+.productdescription {
+	margin-top: 15px;
+	border: 2px solid;
+	border-color: #A7A7A7;
+}
 .headergradient {
 	background: #86cee4; /* Old browsers */
-    background: -moz-linear-gradient(top, #86cee4 0%, #85b9e2 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#86cee4), color-stop(100%,#85b9e2)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #86cee4 0%,#85b9e2 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #86cee4 0%,#85b9e2 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #86cee4 0%,#85b9e2 100%); /* IE10+ */
-    background: linear-gradient(to bottom, #86cee4 0%,#85b9e2 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#86cee4', endColorstr='#85b9e2',GradientType=0 ); /* IE6-9 */
+	background: -moz-linear-gradient(top, #86cee4 0%, #85b9e2 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #86cee4), color-stop(100%, #85b9e2)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #86cee4 0%, #85b9e2 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #86cee4 0%, #85b9e2 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #86cee4 0%, #85b9e2 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #86cee4 0%, #85b9e2 100%); /* W3C */
+ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#86cee4', endColorstr='#85b9e2', GradientType=0 ); /* IE6-9 */
 }
 #navigation-bar ul {
 	list-style: none;
@@ -70,120 +120,106 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
 #navigation-bar ul li {
 	float: left;
 	display: block;
 	padding: 0;
 }
-
 #navigation-bar ul li a {
-	color:#fff;
-	text-decoration:none;
-	display:block;
-	font-family:'Open Sans', sans-serif;
-	font-weight:700;
-	text-transform:uppercase;
-	font-size:14px;
-	position:relative;
-	-webkit-transition:color .25s;
-	-moz-transition:color .25s;
-	-ms-transition:color .25s;
-	-o-transition:color .25s;
-	transition:color .25s;
-	padding:15px 25px;
+	color: #fff;
+	text-decoration: none;
+	display: block;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
+	text-transform: uppercase;
+	font-size: 14px;
+	position: relative;
+	-webkit-transition: color .25s;
+	-moz-transition: color .25s;
+	-ms-transition: color .25s;
+	-o-transition: color .25s;
+	transition: color .25s;
+	padding: 15px 25px;
 }
-
 #navigation-bar ul li a:after {
-	content:'';
-	display:block;
-	position:absolute;
-	right:-3px;
-	top:19px;
-	height:6px;
-	width:6px;
-	background:#fff;
-	opacity:.5;
+	content: '';
+	display: block;
+	position: absolute;
+	right: -3px;
+	top: 19px;
+	height: 6px;
+	width: 6px;
+	background: #fff;
+	opacity: .5;
 }
-
 #navigation-bar ul li a:before {
-	content:'';
-	display:block;
-	position:absolute;
-	left:0;
-	bottom:0;
-	height:3px;
-	width:0;
-	background:#333;
-	-webkit-transition:width .25s;
-	-moz-transition:width .25s;
-	-ms-transition:width .25s;
-	-o-transition:width .25s;
-	transition:width .25s;
+	content: '';
+	display: block;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 3px;
+	width: 0;
+	background: #333;
+	-webkit-transition: width .25s;
+	-moz-transition: width .25s;
+	-ms-transition: width .25s;
+	-o-transition: width .25s;
+	transition: width .25s;
 }
-
 /* Hide separator - Andrew */
-#navigation-bar ul li.last > a:after,#navigation-bar ul li:last-child > a:after {
-	display:none;
+#navigation-bar ul li.last > a:after, #navigation-bar ul li:last-child > a:after {
+	display: none;
 }
-
-#navigation-bar ul li a:hover,#navigation-bar ul li.active a {
-	color:#333;
+#navigation-bar ul li a:hover, #navigation-bar ul li.active a {
+	color: #333;
 }
-
-#navigation-bar ul li a:hover:before,#navigation-bar ul li.active a:before {
-	width:100%;
+#navigation-bar ul li a:hover:before, #navigation-bar ul li.active a:before {
+	width: 100%;
 }
 
 /*If desktop (screen) and the max width is up to 768 CSS pixels*/
 @media screen and (max-width: 768px) {
-  #navigation-bar ul li {
-  float:none;
-  }
-
-  #navigation-bar ul li a {
-  width:100%;
-  -moz-box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-  box-sizing:border-box;
-  }
-
-  #navigation-bar ul li a:before {
-  height:1px;
-  background:#fff;
-  width:100%;
-  opacity:.2;
-  }
-
-  #navigation-bar ul li a:after,#navigation-bar ul li.last > a:before,#navigation-bar ul li:last-child > a:before {
-  display:none;
-  }
-  /* merge conditional styles with product navigation bar */
-    #product-navigation-bar ul li {
-  float:none;
-  }
-
-  #product-navigation-bar ul li a {
-  width:100%;
-  -moz-box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-  box-sizing:border-box;
-  }
-
-  #product-navigation-bar ul li a:before {
-  height:1px;
-  background:#fff;
-  width:100%;
-  opacity:.2;
-  }
-
-  #product-navigation-bar ul li a:after,#product-navigation-bar ul li.last > a:before,#product-navigation-bar ul li:last-child > a:before {
-  display:none;
-  }
+#navigation-bar ul li {
+	float: none;
 }
-
+#navigation-bar ul li a {
+	width: 100%;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+#navigation-bar ul li a:before {
+	height: 1px;
+	background: #fff;
+	width: 100%;
+	opacity: .2;
+}
+#navigation-bar ul li a:after, #navigation-bar ul li.last > a:before, #navigation-bar ul li:last-child > a:before {
+	display: none;
+}
+/* merge conditional styles with product navigation bar */
+#product-navigation-bar ul li {
+	float: none;
+}
+#product-navigation-bar ul li a {
+	width: 100%;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+#product-navigation-bar ul li a:before {
+	height: 1px;
+	background: #fff;
+	width: 100%;
+	opacity: .2;
+}
+#product-navigation-bar ul li a:after, #product-navigation-bar ul li.last > a:before, #product-navigation-bar ul li:last-child > a:before {
+	display: none;
+}
+}
 #product-navigation-bar {
-	background-color: #85B9E2;
+	background-color: #333;
 }
 /* ~ Real copy paste, find replace ~ */
 #product-navigation-bar ul {
@@ -193,67 +229,45 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
 #product-navigation-bar ul li {
 	float: left;
 	display: block;
 	padding: 0;
 }
-
 #product-navigation-bar ul li a {
-	color:#fff;
-	text-decoration:none;
-	display:block;
-	font-family:'Open Sans', sans-serif;
-	font-weight:700;
-	text-transform:uppercase;
-	font-size:12px;
-	position:relative;
-	-webkit-transition:color .25s;
-	-moz-transition:color .25s;
-	-ms-transition:color .25s;
-	-o-transition:color .25s;
-	transition:color .25s;
-	padding:15px 25px;
+	color: #fff;
+	text-decoration: none;
+	display: block;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
+	text-transform: uppercase;
+	font-size: 12px;
+	position: relative;
+	-webkit-transition: color .5s;
+	-moz-transition: color .5s;
+	-ms-transition: color .5s;
+	-o-transition: color .5s;
+	transition: color .5s;
+	padding: 15px 25px;
 }
-
 #product-navigation-bar ul li a:after {
-	content:'';
-	display:block;
-	position:absolute;
-	right:-3px;
-	top:19px;
-	height:6px;
-	width:6px;
-	background:#fff;
-	opacity:.5;
+	content: '';
+	display: block;
+	position: absolute;
+	right: -3px;
+	top: 5px;
+	height: 35px;
+	width: 6px;
+	background: #FFF;
+	opacity: .5;
 }
-
-#product-navigation-bar ul li a:before {
-	content:'';
-	display:block;
-	position:absolute;
-	left:0;
-	bottom:0;
-	height:3px;
-	width:0;
-	background:#333;
-	-webkit-transition:width .25s;
-	-moz-transition:width .25s;
-	-ms-transition:width .25s;
-	-o-transition:width .25s;
-	transition:width .25s;
-}
-
 /* Hide separator - Andrew */
-#product-navigation-bar ul li.last > a:after,#product-navigation-bar ul li:last-child > a:after {
-	display:none;
+#product-navigation-bar ul li.last > a:after, #product-navigation-bar ul li:last-child > a:after {
+	display: none;
 }
-
-#product-navigation-bar ul li a:hover,#product-navigation-bar ul li.active a {
-	color:#333;
+#product-navigation-bar ul li a:hover, #product-navigation-bar ul li.active a {
+	color: #86CEE4;
 }
-
-#product-navigation-bar ul li a:hover:before,#product-navigation-bar ul li.active a:before {
-	width:100%;
+#product-navigation-bar ul li a:hover:before, #product-navigation-bar ul li.active a:before {
+	width: 100%;
 }
