--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,7 @@ body {
 	border: 3px groove;
 	text-transform: uppercase;
 	width: 100%;
+	text-decoration: none;
 }
 #content {
 	margin: 140px auto;
