--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,8 @@ body {
 	border: 3px groove;
 	text-transform: uppercase;
 	width: 100%;
+}
+#product_location a {
 	text-decoration: none;
 }
 #content {
