--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ body {
 	padding-top: 15px;
 }
 #product_location {
-	border: 2px;
+	border: 2px solid;
 	border-color: #A7A7A7;
 	text-transform: uppercase;
 	width: 100%;
