* forgot to re-enable the display: none

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ body {
 	width: 960px;
 	text-align: center;
 	/* Javascript change */
-	/*display: none; */
+	display: none;
 }
 #footer {
 	background-color: #86CEE4;
