--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,12 +58,12 @@ body {
 }
 .productimage {
 	/* left side */
-	width: 50%;
+	width: 450px;
 	float: left;
 }
 .producttext {
 	/* right side */
-	width: 49%;
+	width: 450px;
 	float: right;
 }
 #products {
@@ -80,22 +80,23 @@ body {
 }
 #content {
 	margin: 140px auto;
-	width: 960px;
+	padding-top: 30px;
+	width: 900px;
 	text-align: center;
 	background-color: #86CEE4;
+	box-shadow: 0px 0px 8px #888888;
 }
 #pcontent {
 	/* above height = 187px */
 	margin: 202px auto;
-	width: 960px;
+	width: 900px;
 	text-align: center;
 	/* Javascript change */
-	display: none;
+	/*display: none;*/
 }
 #footer {
 	background-color: #86CEE4;
 	position: absolute;
-	height: 80px;
 	left: 0;
 	bottom: 0;
 	width: 100%
