* Center barcode -> Now just to remove the text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,6 +220,10 @@ a {
 	border-color: #A7A7A7;
 	margin-top: 15px;
 }
+#productbarcode {
+	width: 100px;
+	margin: 0 auto;
+}
 #productname {
 	/* Set the product name to size 30 and make bold. */
 	border-bottom: 1px solid;
