* Removed HRI (Human readable identifier) * Now to center it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,9 +224,12 @@ a {
 	margin-bottom: 5px;
 }
 #productbarcode_wrapper {
-	border-top: 2px solid;
+	border-top: 1px solid;
+	border-color: #A7A7A7;
 	padding-top: 5px;
 	padding-bottom: 10px;
+}
+#productbarcode_wrapper_subwrapper {
 }
 #productname {
 	/* Set the product name to size 30 and make bold. */
