--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,6 +229,8 @@ a {
 	padding-top: 5px;
 	padding-bottom: 10px;
 }
+#productbarcode_wrapper_subwrapper {
+}
 #productname {
 	/* Set the product name to size 30 and make bold. */
 	border-bottom: 1px solid;
