--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,7 @@ a {
 }
 #productdescription {
 	margin-bottom: 5px;
+	padding-bottom: 5px;
 	border-bottom: 1px solid;
 	border-color: #A7A7A7;
 }
