--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ a {
 	left: 0;
 	right: 0;
 	z-index: 100;
-	height: 187px;
+	height: 180px;
 }
 #productimage {
 	/* Styling for the product image; set dimensions to 290x582 and create a 1 px border with the colour #A7A7A7 */
@@ -243,6 +243,7 @@ a {
 }
 #product-navigation-bar {
 	background-color: #333;
+	margin-top: -7px;
 }
 #product-navigation-bar ul {
 	list-style: none;
