--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,24 +49,48 @@ a {
 	bottom: 0;
 	margin: 0 auto;
 	width: 100%;
-	padding: 10px 0;
+}
+.footergradient {
+	background: #85b9e2;
+	background: -moz-linear-gradient(top, #85b9e2 0%, #86cee4 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #85b9e2), color-stop(100%, #86cee4));
+	background: -webkit-linear-gradient(top, #85b9e2 0%, #86cee4 100%);
+	background: -o-linear-gradient(top, #85b9e2 0%, #86cee4 100%);
+	background: -ms-linear-gradient(top, #85b9e2 0%, #86cee4 100%);
+	background: linear-gradient(to bottom, #85b9e2 0%, #86cee4 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#85b9e2', endColorstr='#86cee4', GradientType=0 );
 }
 #footer {
 	width: 900px;
+	height: 150px;
 	margin: 0 auto;
 }
-#infocolumns {
-	height: 100%;
+#footer a {
+	color: #000;
 }
-#infocolumns ul {
-	list-style-type: none;
-	font-size: 15px;
-	text-align: left;
+#infocolumns {
+	height: 150px;
+	padding-bottom: 10px;
 }
 #infocolumns div {
 	float: left;
 	margin: 0;
-	width: 33%;
+	width: 300px;
+}
+#infocolumns div h1 {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+#infocolumns div p {
+	line-height: 5px;
+	margin: 12px;
+}
+.borderbottom_nocolour {
+	border-bottom: 1px solid;
+}
+.borderbottom {
+	border-bottom: 1px solid;
+	border-color: #A7A7A7;
 }
 /* GLOBAL -> START Navigation Bar CSS */
 /* css motto - "whatever works" */
@@ -145,8 +169,8 @@ a {
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 100;
 	height: 140px;
+	z-index: 10;
 }
 #content {
 	/* Set background colour to #86CEE4, shadow around edge of container*/
@@ -166,7 +190,6 @@ a {
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 100;
 	height: 180px;
 }
 #productimage {
@@ -223,8 +246,6 @@ a {
 #productdescription {
 	margin-bottom: 5px;
 	padding-bottom: 5px;
-	border-bottom: 1px solid;
-	border-color: #A7A7A7;
 }
 #productbarcode_wrapper {
 	padding-top: 5px;
@@ -236,8 +257,6 @@ a {
 }
 #productname {
 	/* Set the product name to size 30 and make bold. */
-	border-bottom: 1px solid;
-	border-color: #A7A7A7;
 	font-weight: 700;
 	font-size: 30px;
 }
